<resources>
    <string name="app_name">NotesApp</string>
    <string name="to_do">To Do</string>
    <string name="enter_note">Enter a note</string>
    <string name="save">Save</string>
    <string name="dateDefault">28 Agustus 2019</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create account</string>
    <string name="have_account_login">Have account? Login</string>
    <string name="fullname">Fullname</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
</resources>
