<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.RegisterActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dimens16dp">

            <TextView
                android:id="@+id/app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen64dp"
                android:fontFamily="@font/play_bold"
                android:gravity="center"
                android:text="Notes App"
                android:textColor="@color/colorAccent"
                android:textSize="42sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/app"
                android:layout_marginBottom="@dimen/dimens4dp"
                android:layout_marginTop="@dimen/dimens16dp"
                android:hint="@string/fullname"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_name"
                android:layout_marginBottom="@dimen/dimens4dp"
                android:hint="@string/email_address"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_email"
                android:layout_marginBottom="@dimen/dimens4dp"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_cpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_password"
                android:layout_marginBottom="@dimen/dimens4dp"
                android:fontFamily="@font/play_regular"
                android:hint="@string/confirm_password"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_cpassword"
                android:layout_marginBottom="@dimen/dimens10dp"
                android:layout_marginTop="@dimen/dimens16dp"
                android:gravity="center"
                android:text="@string/have_account_login"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/tv_login"
                android:background="@color/colorAccent"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>