<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.AccountActivity">

    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_name"
            android:text="@string/fullname"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/mgrey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_marginTop="@dimen/dimens4dp"
            android:layout_below="@id/tv_name"
            android:gravity="center"
            android:text="@string/email_address"
            android:textSize="16sp"
            android:textColor="@color/mgrey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_below="@id/tv_email"
            android:text="@string/logout"
            android:layout_marginTop="@dimen/dimen64dp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:background="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</RelativeLayout>