<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dimens4dp"
    android:layout_marginLeft="@dimen/dimens10dp"
    android:layout_marginRight="@dimen/dimens10dp"
    android:layout_marginTop="@dimen/dimens4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="2dp"
    app:cardElevation="1dp">

    <LinearLayout
        android:id="@+id/line"
        android:layout_width="@dimen/dimens10dp"
        android:layout_height="match_parent"
        android:background="@color/mgrey"
        android:orientation="vertical" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimens10dp"
        android:layout_marginStart="@dimen/dimens10dp"
        android:padding="@dimen/dimens10dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_do"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/note"
            android:maxLines="4"
            android:maxLength="150"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginTop="@dimen/dimens4dp"
            android:text="@string/enter_note" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/note"
            android:layout_marginTop="@dimen/dimens4dp"
            android:gravity="end"
            android:text="@string/dateDefault" />
    </RelativeLayout>
</android.support.v7.widget.CardView>